# OptiSync

./: CMakeLists.txt
OptiComm/: CMakeLists.txt
OptiComm/src/: opticomm.cpp  opticomm.h
src/: main.cpp  optisync.cpp  optisync.h  xorgwrap.cpp  xorgwrap.h
